--- a/product matching.ipynb
+++ b/product matching.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e1578a",
+   "id": "75289c60",
    "metadata": {},
    "source": [
     "If we obsreve there are null values in features like brand, description,image,product_specifications"
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c58d40",
+   "id": "b580f8f0",
    "metadata": {},
    "source": [
     "This is the python framework for text,image embeddings.This framework generates embeddings for each input sentence, Sentences are passed as a list of string."
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e3e0d6",
+   "id": "97b5e7ab",
    "metadata": {},
    "source": [
     "Here we use 'all-MiniLM-L6-v2' model"
@@ -1089,18 +1089,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "45ebbfa3",
    "metadata": {},
    "outputs": [],
    "source": [
     "final_prod_data = pd.concat([flipkart_prod_final_data,amazon_prod_data],axis=1)\n",
-    "final_prod_data.to_csv('final_result.csv')"
+    "final_prod_data.to_csv('matched_products.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "6d8f8e4b",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
        "4                   208.0                       258.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
